
Misc:
- FileInfo:
    - support MzTab files (#7568)
- TOPPAS 
    - supports writing results to output directories  (for TOPP tools which have such parameters) (#7497)
    - TOPPAS tutorial enhanced (#7497)
- FeatureFinderMetabo
    - added report_smoothed_intensities parameter (#7594)
- Write out percolator features in search engine adapters (by default, no PSMFeatureExtractor is needed)


Fixes:
- OpenMS does not compile when using GLPK (instead of COINOR) (#7626)

------------------------------------------------------------------------------------------
----                                OpenMS 3.2.0       (released 09/2024)             ----
------------------------------------------------------------------------------------------

What's new:
- Changes breaking backwards compatibility: 
   - Rename of parameters for TOPP tool FeatureFinderCentroided (debug -> advanced), and PeakPickerWavelet/TOFCalibration (optimization -> optimization:type) (#7154)
   - Rename of parameters for TOPP tool IDFilter (score:pep -> score:psm; score:prot -> score:protein; score:protgroup -> score:proteingroup) with 'nan' as new default (#7541)
   - 3.2.0 KNIME package requires KNIME 5.3 or later
- Support for SubsetNeighborSearch (SNS) via DecoyDatabase (#7565)
- SageAdapter received large updates including added functionality for PTM discovery + enabling features such as chimera seach, RT prediction, filtering by q-value, etc. 

Library:
- Extend FileHandler to support load and store operations for our major datastructures (spectra, features, identifications, etc.). Replaced file type specific code with the more generic FileHandler calls to decouple the IO code from other parts of the library.